Fixed ES5 numbers code alignment

--- a/src/_modules/o-demo/o-demo.scss
+++ b/src/_modules/o-demo/o-demo.scss
@@ -97,7 +97,7 @@
 		}
 
 		code {
-			margin-top: -23px;
+			margin-top: -2.2rem;
 		}
 	}
 
@@ -109,6 +109,10 @@
 			&::before {
 				display: none;
 			}
+		}
+
+		code {
+			margin-top: -4.5rem;
 		}
 	}
 
